updated some of the details

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am student at MSU's Coding Bootcamp and am currently working full-time to support my educational habits.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Metro Detroit</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Idk videogames.</p>
       <h1>What's your dream job?</h1>
       <p>Details here...</p>
       <h1>Where do you live?</h1>
